Sticky parallax header fixed and dark mode updated

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,7 +29,7 @@ body{
 }
 
 .sticky + .contentwrapper {
-  margin-top: 200px;
+  margin-top: 300px;
 }
 
 
@@ -83,6 +83,11 @@ body.night {
 
   .contentwrapper {
     background-color: rgba(10,10,10, 0.95);
+  }
+
+  .next, .prev {
+    color: rgb(10,10,10);
+    background-color: rgba(245,245,245, 0.5);
   }
 
 }
@@ -156,7 +161,7 @@ body.night {
   border: none;
   padding: 15px 5px;
   color: white;
-  background-color: #1f1f1f;
+  background-color: darkgray;
   cursor: pointer;
 }
 .prev:focus,
